# m2m-auth-registry

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  docker-compose.yaml  gen-keys.sh
.github/workflows/: build-code.yaml
crates/attendance/: Cargo.toml  Dockerfile
crates/attendance/src/: main.rs
crates/attendance/src/config/: env.rs
crates/attendance/src/libs/: db.rs  jwt.rs  mod.rs  redis.rs
crates/http/: Cargo.toml  Dockerfile
crates/http/src/: main.rs
crates/http/src/config/: env.rs
crates/http/src/controller/: data.rs  mod.rs  root.rs
crates/http/src/libs/: db.rs  http.rs  jwt.rs  mod.rs  redis.rs
crates/pinger/: Cargo.toml  Dockerfile
crates/pinger/src/: main.rs
crates/pinger/src/libs/: db.rs  redis.rs
demo/: .env.example  bun.lockb  index.ts  package.json
